--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 </head>
 <body>
     
-    <h1>Web 2 Framework</h1>
 
 <h1>Space Jam</h1>
+
+<video src="video/trailor.mp4" controls></video>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
