--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <h1>Space Jam</h1>
 
-<video src="video/trailor.mp4" controls></video>
+<video src="video/trailer.mp4" controls></video>
 <div class="container">
 	<div id="player" data-plyr-provider="youtube" data-plyr-embed-id="oKNy-MWjkcU"></div>
 </div>
