--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
     
+<header><h1>Space Jam</h1></header>
 
-<h1>Space Jam</h1>
 
 <video src="video/trailer.mp4" controls></video>
 <div class="container">
@@ -33,18 +33,29 @@
   
   
     <article>
-     <h1>ABOUT:</h1>
-      <p class="line_split">Space Jam is a 1996 American live-action/animated family sports comedy film directed by Joe Pytka. Starring basketball player Michael Jordan, the film depicts a fictionalized account of what happened between Jordan's initial retirement from the NBA in 1993 and his comeback in 1995, in which he is enlisted by Bugs Bunny, Daffy Duck and the rest of the Looney Tunes characters to help them win a basketball match against a group of aliens who want to enslave them for their amusement park.<br/> Released theatrically by Warner Bros. Family Entertainment on November 15, 1996,[4] Space Jam received mixed reviews from critics for its merits of combining Jordan and his profession with the Looney Tunes characters, while the live-action and animated mix especially the animated basketball scenes, Jordan's performance and faithful interpretations of the Looney Tunes were praised. The film was a box office success, opening at No. 1 in the North American box office and grossing over $230 million worldwide, becoming the highest-grossing basketball film of all time. A sequel, titled Space Jam 2 and starring LeBron James, is scheduled for release on July 16, 2021<br/> </p>
+     <h2>ABOUT:</h2>
+      <p>Space Jam is a 1996 American live-action/animated family sports comedy film directed by Joe Pytka. Starring basketball player Michael Jordan, 
+        the film depicts a fictionalized account of what happened between Jordan's initial retirement from the NBA in 1993 and his comeback in 1995, 
+        in which he is enlisted by Bugs Bunny, Daffy Duck and the rest of the Looney Tunes characters to help them win a basketball match against a group of aliens who want to enslave them for their amusement park.</p>
+        <p>Released theatrically by Warner Bros. Family Entertainment on November 15, 1996, Space Jam received mixed reviews from critics for its merits of combining Jordan and his profession with the Looney Tunes 
+        characters, while the live-action and animated mix especially the animated basketball scenes, Jordan's performance and faithful interpretations of the Looney Tunes were praised. The film was a box office success, 
+        opening at No. 1 in the North American box office and grossing over $230 million worldwide, becoming the highest-grossing basketball film of all time. A sequel, titled Space Jam 2 and starring LeBron James, is scheduled for release on July 16, 2021 </p>
 
 
     </article>
   <aside>
     
-    <h1>Starring:</h1>
-    <p><img class="fixed bugs" src="https://github.com/sscheller/movie-trailor/blob/master/github/b04ca2499f0ffcbe9cb1b21aedbdb3ba_looney-tunes-cardboard-cutouts-posters-at-allposterscom_237-450.jpeg?raw=true" alt="bugs bunny"></p>
-    <p>Bugs Bunny</p>
-      <p><img class="fixed" src="https://github.com/sscheller/movie-trailor/blob/master/github/80104872169b6624ab6a0f9bd1ebbf61.jpg?raw=true" alt="michael jordan"></p>
-    <p>Michael Jordan</p>
+    <h2>Starring:</h2>
+ <div class="picture">
+      <img id="bugs" src="https://github.com/sscheller/movie-trailor/blob/master/github/b04ca2499f0ffcbe9cb1b21aedbdb3ba_looney-tunes-cardboard-cutouts-posters-at-allposterscom_237-450.jpeg?raw=true" alt="bugs bunny">
+      <span class="caption">Bugs Bunny</span>
+  </div>
+  <div class="picture2">
+       <img id="jordan" src="https://github.com/sscheller/movie-trailor/blob/master/github/80104872169b6624ab6a0f9bd1ebbf61.jpg?raw=true" alt="michael jordan">
+       <span class="caption">Michael Jordan</span>
+      </div>   
+
+</main>
    
   </aside>
   </div>
